added baseline model to validate model dev

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -26,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -52,6 +43,7 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler,MinMaxScaler\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
@@ -120,6 +112,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createBaseline(historical_data:pd.DataFrame) -> pd.DataFrame:   #this function would be done in practice by SQL or Spark\n",
+    "    historical_data = addFeatures_durations(historical_data=historical_data)\n",
+    "    try:\n",
+    "        baseline_data = historical_data[['store_id','actual_total_delivery_duration']]\n",
+    "        baseline_data = baseline_data.dropna()\n",
+    "        baseline_data = pd.merge(\n",
+    "            left=baseline_data,\n",
+    "            right=baseline_data.groupby('store_id').actual_total_delivery_duration.aggregate([np.mean,np.std]),\n",
+    "            how='inner',\n",
+    "            on='store_id'\n",
+    "        )\n",
+    "        baseline_data['z-score'] = (baseline_data['actual_total_delivery_duration'] - baseline_data['mean']) / baseline_data['std']\n",
+    "        baseline_data = baseline_data.loc[(baseline_data['z-score'] <=3) & (baseline_data['z-score'] >= -3)]\n",
+    "        baseline_avgs = baseline_data.groupby('store_id').actual_total_delivery_duration.aggregate([np.mean])\n",
+    "        baseline_data = pd.merge(\n",
+    "            left=historical_data[['store_id','actual_total_delivery_duration']].dropna(),\n",
+    "            right=baseline_avgs,\n",
+    "            on='store_id'\n",
+    "        )\n",
+    "        baseline_MAE = mean_absolute_error(y_true=baseline_data['actual_total_delivery_duration'],y_pred=baseline_data['mean'])\n",
+    "        baseline_RMSE = mean_squared_error(y_true=baseline_data['actual_total_delivery_duration'],y_pred=baseline_data['mean'],squared=False)\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return {'baseline_MAE:':baseline_MAE,'baseline_RMSE:':baseline_RMSE}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -128,7 +152,7 @@
     "# the est_time_prep feature depends on the actual delivery datetime, which can't be provided to a model\n",
     "# BUT a set of values derived from historical data can be given to a model on demand\n",
     "\n",
-    "def addFeatures_store_prep_stats(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "def addFeatures_store_prep_stats(historical_data:pd.DataFrame) -> pd.DataFrame:   #this function would be done in practice by SQL or Spark\n",
     "## returns a separate dataframe with the min, max, median and mean and standard deviation of the est_prep_time_per_item for each store_id\n",
     "    try:\n",
     "        historical_data = addFeatures_durations(historical_data=historical_data)\n",
@@ -153,7 +177,7 @@
     "        raise ex\n",
     "    return store_prep_stats_df\n",
     "\n",
-    "def addFeatures_category_prep_stats(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "def addFeatures_category_prep_stats(historical_data:pd.DataFrame) -> pd.DataFrame:   #this function would be done in practice by SQL or Spark\n",
     "## returns a separate dataframe with the min,max, median, mean and standard deviation for each category\n",
     "    try:\n",
     "        historical_data = addFeatures_durations(historical_data=historical_data)\n",
@@ -1064,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,51 +1098,37 @@
     "    try:\n",
     "        model.fit(x_train,y_train)\n",
     "        ## train error\n",
-    "        y_hat = model.predict(x_train)\n",
-    "        train_error = mean_squared_error(y_true=y_train,y_pred=y_hat,squared=False)\n",
+    "        y_hat_train = model.predict(x_train)\n",
+    "        train_RMSE = mean_squared_error(y_true=y_train,y_pred=y_hat_train,squared=False)\n",
+    "        train_MAE = mean_absolute_error(y_true=y_train,y_pred=y_hat_train)\n",
     "        ## test error\n",
-    "        y_hat = model.predict(x_test)\n",
-    "        test_error = mean_squared_error(y_true=y_test,y_pred=y_hat,squared=False)\n",
+    "        y_hat_test = model.predict(x_test)\n",
+    "        test_RMSE = mean_squared_error(y_true=y_test,y_pred=y_hat_test,squared=False)\n",
+    "        test_MAE = mean_absolute_error(y_true=y_test,y_pred=y_hat_test)\n",
+    "        eval_stats = {\n",
+    "            'train_RMSE:':train_RMSE,\n",
+    "            'train_MAE:':train_MAE,\n",
+    "            'test_RMSE:':test_RMSE,\n",
+    "            'test_MAE:':test_MAE\n",
+    "        }\n",
     "        trained_model = model\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
-    "    return trained_model,y_hat,train_error,test_error"
+    "    return trained_model,y_hat_test,eval_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xtrain,xtest,ytrain,ytest = build_train_test(dataset=VIF_train_df,target_feature='actual_total_delivery_duration',test_size=0.2)\n",
-    "xtrain_sc = apply_standard_scaler(xtrain)[0]\n",
-    "xtest_sc = apply_standard_scaler(xtest)[0]\n",
-    "ytrain_sc,y_train_scaler = apply_standard_scaler(ytrain.values.reshape(-1,1))\n",
-    "ytest_sc,ytest_scaler = apply_standard_scaler(ytest.values.reshape(-1,1))"
+    "xtrain,xtest,ytrain,ytest = build_train_test(dataset=VIF_train_df,target_feature='actual_total_delivery_duration',test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\data.py:250: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
-     ]
-    }
-   ],
-   "source": [
-    "trained_model,y_hat,train_error,test_error = applyMethod_make_regression(x_train=xtrain_sc,x_test=xtest_sc,y_test=ytest_sc,y_train=ytrain_sc,model=xgboost.XGBRegressor())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1132,36 +1142,40 @@
     {
      "data": {
       "text/plain": [
-       "1037.2075"
+       "{'train_RMSE:': 862.523,\n",
+       " 'train_MAE:': 612.2747,\n",
+       " 'test_RMSE:': 1037.2075,\n",
+       " 'test_MAE:': 652.5748}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "applyMethod_make_regression(x_test=vif_x_test,x_train=vif_x_train,y_test=vif_y_test,y_train=vif_y_train,model=xgboost.XGBRegressor())[3]"
+    "applyMethod_make_regression(x_train=xtrain,x_test=xtest,y_test=ytest,y_train=ytrain,model=xgboost.XGBRegressor())[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1090.6267"
+       "{'baseline_MAE:': 783.5442750429107, 'baseline_RMSE:': 19249.89784985233}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transform_rmse_to_seconds(scaler=ytest_scaler,y_test=ytest,y_hat_scaled=y_hat)[1]"
+    "# does the first attempt at modeling improve on a baseline, average-derived model?\n",
+    "createBaseline(historical_data=historical_data)"
    ]
   }
  ],
