basic model dev complete

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1119,6 +1119,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def applyMethod_xgboost(x_train,y_train,x_test,y_test,reg_alpha:int,reg_lambda:int,eval_metric:str,random_state=42):\n",
+    "    try:\n",
+    "        model = xgboost.XGBRegressor(reg_alpha,reg_lambda,eval_metric,random_state).fit(x_train,y_train)\n",
+    "        ## train error\n",
+    "        y_hat_train = model.predict(x_train)\n",
+    "        train_RMSE = mean_squared_error(y_true=y_train,y_pred=y_hat_train,squared=False)\n",
+    "        train_MAE = mean_absolute_error(y_true=y_train,y_pred=y_hat_train)\n",
+    "        ## test error\n",
+    "        y_hat_test = model.predict(x_test)\n",
+    "        test_RMSE = mean_squared_error(y_true=y_test,y_pred=y_hat_test,squared=False)\n",
+    "        test_MAE = mean_absolute_error(y_true=y_test,y_pred=y_hat_test)\n",
+    "        eval_stats = {\n",
+    "            'train_RMSE:':train_RMSE,\n",
+    "            'train_MAE:':train_MAE,\n",
+    "            'test_RMSE:':test_RMSE,\n",
+    "            'test_MAE:':test_MAE\n",
+    "        }\n",
+    "        trained_model = model\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return trained_model,y_hat_test,eval_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1142,13 +1171,13 @@
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 862.523,\n",
-       " 'train_MAE:': 612.2747,\n",
-       " 'test_RMSE:': 1037.2075,\n",
-       " 'test_MAE:': 652.5748}"
+       "{'train_RMSE:': 850.6288,\n",
+       " 'train_MAE:': 609.5093,\n",
+       " 'test_RMSE:': 1042.3767,\n",
+       " 'test_MAE:': 654.0984}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
