identifying observations w/ largest abs error

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1125,7 +1125,7 @@
    "source": [
     "def applyMethod_xgboost(x_train,y_train,x_test,y_test,reg_alpha:int,reg_lambda:int,eval_metric:str,random_state=42):\n",
     "    try:\n",
-    "        model = xgboost.XGBRegressor(reg_alpha,reg_lambda,eval_metric,random_state).fit(x_train,y_train)\n",
+    "        model = xgboost.XGBRegressor(reg_alpha=reg_alpha,reg_lambda=reg_lambda,eval_metric=eval_metric,random_state=random_state).fit(x_train,y_train)\n",
     "        ## train error\n",
     "        y_hat_train = model.predict(x_train)\n",
     "        train_RMSE = mean_squared_error(y_true=y_train,y_pred=y_hat_train,squared=False)\n",
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1167,23 +1167,61 @@
       "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\data.py:250: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
       "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'train_RMSE:': 862.523,\n",
-       " 'train_MAE:': 612.2747,\n",
-       " 'test_RMSE:': 1037.2075,\n",
-       " 'test_MAE:': 652.5748}"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "applyMethod_make_regression(x_train=xtrain,x_test=xtest,y_test=ytest,y_train=ytrain,model=xgboost.XGBRegressor())[2]"
+    "trained_xgbregressor = applyMethod_make_regression(x_train=xtrain,x_test=xtest,y_test=ytest,y_train=ytrain,model=xgboost.XGBRegressor())[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat_train = trained_xgbregressor.predict(xtrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat_test = trained_xgbregressor.predict(xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## join train absolute error with all features\n",
+    "pred_frame = xtrain.join(ytrain)\n",
+    "pred_frame['yhat_pred'] = yhat_train.reshape(-1,1)\n",
+    "## test_data['error'] = test_data['actual_total_delivery_duration'] - test_data['yhat_pred']\n",
+    "pred_frame['abs_error'] = abs(pred_frame['actual_total_delivery_duration'] - pred_frame['yhat_pred'])\n",
+    "full_feature_df_train = pd.merge(\n",
+    "    left = pred_frame[['abs_error']],\n",
+    "    right = train_df,\n",
+    "    how='left',\n",
+    "    left_index=True,\n",
+    "    right_index=True\n",
+    "    )\n",
+    "## join test absolute error with all features\n",
+    "pred_frame = xtest.join(ytest)\n",
+    "pred_frame['yhat_pred'] = yhat_test.reshape(-1,1)\n",
+    "## test_data['error'] = test_data['actual_total_delivery_duration'] - test_data['yhat_pred']\n",
+    "pred_frame['abs_error'] = abs(pred_frame['actual_total_delivery_duration'] - pred_frame['yhat_pred'])\n",
+    "full_feature_df_test = pd.merge(\n",
+    "    left = pred_frame[['abs_error']],\n",
+    "    right = train_df,\n",
+    "    how='left',\n",
+    "    left_index=True,\n",
+    "    right_index=True\n",
+    "    )\n",
+    "full_feature_df = pd.concat([full_feature_df_test,full_feature_df_train])"
    ]
   },
   {
