No progress on identifying split

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1221,14 +1221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A single-model approach produces a long-tailed error distribution; 78.22210858263018% of the observations in the dataset have an absolute error of less than 900 seconds or twenty minutes.\n"
+      "A single-model approach produces a long-tailed error distribution; 59.449416176595925% of the observations in the dataset have an absolute error of less than 900 seconds or twenty minutes.\n"
      ]
     },
     {
@@ -1237,7 +1237,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1257,7 +1257,7 @@
     "\n",
     "print(\n",
     "    \"A single-model approach produces a long-tailed error distribution; \"\n",
-    "    + str(((chixit[chixit['abs_error'] < 900].shape[0] / chixit.shape[0])*100)) + \"%\"\n",
+    "    + str(((chixit[chixit['abs_error'] < 600].shape[0] / chixit.shape[0])*100)) + \"%\"\n",
     "    + \" of the observations in the dataset have an absolute error of less than 900 seconds or twenty minutes.\"\n",
     "    )\n",
     "chixit.plot.hist(bins=256)"
@@ -1297,10 +1297,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tail_df = VIF_train_df.drop(\n",
+    "    labels=full_feature_df[full_feature_df['abs_error'] <= 600].index,\n",
+    "    axis=0\n",
+    ")\n",
+    "tail_xtrain,tail_xtest,tail_ytrain,tail_ytest = build_train_test(dataset=tail_df,target_feature='actual_total_delivery_duration',test_size=0.2)\n",
+    "\n",
+    "body_df = VIF_train_df.drop(\n",
+    "    labels=full_feature_df[full_feature_df['abs_error'] > 600].index,\n",
+    "    axis=0\n",
+    ")\n",
+    "body_xtrain,body_xtest,body_ytrain,body_ytest = build_train_test(dataset=body_df,target_feature='actual_total_delivery_duration',test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\data.py:250: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 1218.6412,\n",
+       " 'train_MAE:': 1009.03436,\n",
+       " 'test_RMSE:': 1474.7993,\n",
+       " 'test_MAE:': 1158.0519}"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tail_model = applyMethod_make_regression(x_train=tail_xtrain,x_test=tail_xtest,y_train=tail_ytrain,y_test=tail_ytest,model=xgboost.XGBRegressor())\n",
+    "tail_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\data.py:250: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'train_RMSE:': 330.0506,\n",
+       " 'train_MAE:': 274.84006,\n",
+       " 'test_RMSE:': 367.8758,\n",
+       " 'test_MAE:': 301.99106}"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "body_model = applyMethod_make_regression(x_train=body_xtrain,x_test=body_xtest,y_train=body_ytrain,y_test=body_ytest,model=xgboost.XGBRegressor())\n",
+    "body_model[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chezo = trained_xgbregressor[0].predict(xtest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "652.5748901367188"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chirco = xtest.join(ytest)\n",
+    "chirco['pred'] = chezo.reshape(-1,1)\n",
+    "chirco['abs_error'] = abs(chirco['actual_total_delivery_duration'] - chirco['pred'])\n",
+    "chirco['abs_error'].mean()"
+   ]
   }
  ],
  "metadata": {
