added rmse to mean ratio

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -19,9 +19,7 @@
     "\n",
     "The dataset comes with two other predicted values: `estimated_order_place_duration` and `estimated_store_to_consumer_driving_duration`. The missing piece is the amount of time the order spends in the store. In addition to generic feature engineering, I will be creating separate order 'prep_time' statistics tables/dataframes to simulate gold fact tables in a database or features from a feature store (i.e. Feather, Feast) that would in turn live in a data lake.\n",
     "\n",
-    "This is a fairly popular exercise so it is possible to derive performance objectives. My goal is to produce a feature set and model that has a test RMSE of less than 1200 seconds and a test MAE of less than 600 seconds, with a stretch goal of 600 seconds for the test RMSE. For reference, the best models publically available produce a test RMSE around 980 - 1000 seconds.\n",
-    "\n",
-    "Since an error of 20 minutes is impractical, I will split up the model based on the quantiles of an important and/or strongly correlated feature to see if I can build a model, or models, for the majority of the markets that will pass cross-validation and return a more reasonable test RMSE. "
+    "This is a fairly popular exercise so it is possible to derive performance objectives. My goal is to produce a feature set and model that has a test RMSE of less than 1200 seconds and a test MAE of less than 600 seconds, with a stretch goal of 600 seconds for the test RMSE. For reference, the best models publically available produce a test RMSE around 980 - 1000 seconds. "
    ]
   },
   {
@@ -1071,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,8 +1118,12 @@
     "        test_MAE = mean_absolute_error(y_true=y_test,y_pred=y_hat_test)\n",
     "        eval_stats = {\n",
     "            'train_RMSE:':train_RMSE,\n",
+    "            # gives context to the RMSE; the lower the ratio the better\n",
+    "            'train_RMSE_to_mean_ratio':train_RMSE / (np.mean(y_train)),\n",
     "            'train_MAE:':train_MAE,\n",
     "            'test_RMSE:':test_RMSE,\n",
+    "            # gives context to the RMSE; the lower the ratio the better\n",
+    "            'test_RMSE_to_mean_ratio':test_RMSE / (np.mean(y_test)),\n",
     "            'test_MAE:':test_MAE\n",
     "        }\n",
     "        trained_model = model\n",
@@ -1132,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,8 +1151,12 @@
     "        test_MAE = mean_absolute_error(y_true=y_test,y_pred=y_hat_test)\n",
     "        eval_stats = {\n",
     "            'train_RMSE:':train_RMSE,\n",
+    "            # gives context to the RMSE; the lower the ratio the better\n",
+    "            'train_RMSE_to_mean_ratio':train_RMSE / (np.mean(y_train)),\n",
     "            'train_MAE:':train_MAE,\n",
     "            'test_RMSE:':test_RMSE,\n",
+    "            # gives context to the RMSE; the lower the ratio the better\n",
+    "            'test_RMSE_to_mean_ratio':test_RMSE / (np.mean(y_test)),\n",
     "            'test_MAE:':test_MAE\n",
     "        }\n",
     "        trained_model = model\n",
@@ -1194,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1212,7 @@
        " 'test_MAE:': 650.0719}"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -1239,12 +1245,14 @@
      "data": {
       "text/plain": [
        "{'train_RMSE:': 862.523,\n",
+       " 'train_RMSE_to_mean_ratio': 0.302213655111118,\n",
        " 'train_MAE:': 612.2747,\n",
        " 'test_RMSE:': 1037.2075,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3639144755129205,\n",
        " 'test_MAE:': 652.5748}"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -1278,12 +1286,14 @@
      "data": {
       "text/plain": [
        "{'train_RMSE:': 796.1849,\n",
+       " 'train_RMSE_to_mean_ratio': 0.278969880808944,\n",
        " 'train_MAE:': 561.24567,\n",
        " 'test_RMSE:': 1014.22095,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3558494101982521,\n",
        " 'test_MAE:': 608.876}"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 442,
      "metadata": {},
      "output_type": "execute_result"
     }
