Updated results writeups

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -1174,23 +1174,29 @@
     "\n",
     "The PCA featureset took 4.6 seconds to produce, and needed 2 minutes 14.8 seconds to train a vanilla xgboost regression that produced the following performance statistics:\n",
     "\n",
-    "    {'train_RMSE:': 797.69305,\n",
-    "    'train_MAE:': 576.6144,\n",
-    "    'test_RMSE:': 1037.3265,\n",
-    "    'test_MAE:': 646.91187}\n",
+    "    {'train_RMSE:': 796.2581,\n",
+    "    'train_RMSE_to_mean_ratio': 0.2789955436479982,\n",
+    "    'train_MAE:': 575.54443,\n",
+    "    'test_RMSE:': 1045.1416,\n",
+    "    'test_RMSE_to_mean_ratio': 0.3666982263503457,\n",
+    "    'test_MAE:': 648.3273}\n",
     "\n",
     "The VIF featureset took 5 minutes 19.2 seconds to produce, and needed 7.8 seconds to train a vanilla xgboost regression that produced the following performance statistics:\n",
     "\n",
     "    {'train_RMSE:': 862.523,\n",
+    "    'train_RMSE_to_mean_ratio': 0.302213655111118,\n",
     "    'train_MAE:': 612.2747,\n",
     "    'test_RMSE:': 1037.2075,\n",
+    "    'test_RMSE_to_mean_ratio': 0.3639144755129205,\n",
     "    'test_MAE:': 652.5748}\n",
     "\n",
     "For comparison, a dataset without any dimensionality reduction needed 23.1 seconds to train a vanilla xgboost regression and produced the following performance statistics:\n",
     "\n",
     "    {'train_RMSE:': 796.1849,\n",
+    "    'train_RMSE_to_mean_ratio': 0.278969880808944,\n",
     "    'train_MAE:': 561.24567,\n",
     "    'test_RMSE:': 1014.22095,\n",
+    "    'test_RMSE_to_mean_ratio': 0.3558494101982521,\n",
     "    'test_MAE:': 608.876}\n",
     "\n",
     "(Update with results of cross-validation)\n",
@@ -1200,19 +1206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 797.505,\n",
-       " 'train_MAE:': 576.3437,\n",
-       " 'test_RMSE:': 1083.2153,\n",
-       " 'test_MAE:': 650.0719}"
+       "{'train_RMSE:': 796.2581,\n",
+       " 'train_RMSE_to_mean_ratio': 0.2789955436479982,\n",
+       " 'train_MAE:': 575.54443,\n",
+       " 'test_RMSE:': 1045.1416,\n",
+       " 'test_RMSE_to_mean_ratio': 0.3666982263503457,\n",
+       " 'test_MAE:': 648.3273}"
       ]
      },
-     "execution_count": 432,
+     "execution_count": 446,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -1493,13 +1501,15 @@
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 862.523,\n",
-       " 'train_MAE:': 612.2747,\n",
-       " 'test_RMSE:': 1037.2075,\n",
-       " 'test_MAE:': 652.5748}"
+       "{'train_RMSE:': 512.0458,\n",
+       " 'train_RMSE_to_mean_ratio': 0.1794122867685396,\n",
+       " 'train_MAE:': 384.5578,\n",
+       " 'test_RMSE:': 745.9162,\n",
+       " 'test_RMSE_to_mean_ratio': 0.2617120461682224,\n",
+       " 'test_MAE:': 535.37384}"
       ]
      },
-     "execution_count": 426,
+     "execution_count": 450,
      "metadata": {},
      "output_type": "execute_result"
     }
