--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +468,7 @@
        "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 608,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1738,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1752,15 +1761,15 @@
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 1063.6913,\n",
-       " 'train_RMSE_to_mean_ratio': 0.5318346704029178,\n",
-       " 'train_MAE:': 566.7834,\n",
-       " 'test_RMSE:': 935.90173,\n",
-       " 'test_RMSE_to_mean_ratio': 0.4682324520477311,\n",
-       " 'test_MAE:': 599.483}"
+       "{'train_RMSE:': 862.0253,\n",
+       " 'train_RMSE_to_mean_ratio': 0.43100377323758826,\n",
+       " 'train_MAE:': 536.70514,\n",
+       " 'test_RMSE:': 896.58405,\n",
+       " 'test_RMSE_to_mean_ratio': 0.44856177851585183,\n",
+       " 'test_MAE:': 567.7539}"
       ]
      },
-     "execution_count": 645,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1791,7 +1800,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual_total_delivery_duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4024.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1781.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3075.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2390.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196036</th>\n",
+       "      <td>3756.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196037</th>\n",
+       "      <td>3108.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196038</th>\n",
+       "      <td>3510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196039</th>\n",
+       "      <td>2907.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196040</th>\n",
+       "      <td>2103.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>175995 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        actual_total_delivery_duration\n",
+       "0                               4024.0\n",
+       "1                               1781.0\n",
+       "2                               3075.0\n",
+       "3                               2390.0\n",
+       "4                               2300.0\n",
+       "...                                ...\n",
+       "196036                          3756.0\n",
+       "196037                          3108.0\n",
+       "196038                          3510.0\n",
+       "196039                          2907.0\n",
+       "196040                          2103.0\n",
+       "\n",
+       "[175995 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deliv_est_df[0][['actual_total_delivery_duration']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1805,15 +1919,15 @@
     {
      "data": {
       "text/plain": [
-       "{'train_RMSE:': 797.5297,\n",
-       " 'train_RMSE_to_mean_ratio': 0.279441093305378,\n",
-       " 'train_MAE:': 518.8211,\n",
-       " 'test_RMSE:': 924.06177,\n",
-       " 'test_RMSE_to_mean_ratio': 0.3242161738681879,\n",
-       " 'test_MAE:': 572.66595}"
+       "{'train_RMSE:': 682.8151,\n",
+       " 'train_RMSE_to_mean_ratio': 0.23924701380789054,\n",
+       " 'train_MAE:': 500.2487,\n",
+       " 'test_RMSE:': 981.2463,\n",
+       " 'test_RMSE_to_mean_ratio': 0.34427992225918796,\n",
+       " 'test_MAE:': 592.6571}"
       ]
      },
-     "execution_count": 639,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,11 +1939,6 @@
     "    y_train=deliv_ytrain,\n",
     "    y_test=deliv_ytest,\n",
     "    model=xgboost.XGBRegressor(\n",
-    "        max_depth=7,\n",
-    "        subsample=1,\n",
-    "        reg_lambda=0.8,\n",
-    "        eta=0.3,\n",
-    "        objective='reg:gamma'\n",
     "    )\n",
     ")\n",
     "deliv_prep_model[2]"
